Add Expand and Collapse text
Addition of the Expand and Collapse text that signify the current stay of the given subsection and whether they are being displayed or not.

--- a/index_v2.html
+++ b/index_v2.html
@@ -18,8 +18,15 @@
                 <p class="centered-text dark-purple-font dark-purple-border spaced-lettering">Data Analyst - BI Developer - Aspiring Software Engineer</p>
             </div>
             <div class = "dark-purple-border" id="Professional">
-                <h2>Proessional Experience</h2>
-                <div class="hidden">
+                <div>
+                    <h2 class="dark-purple-border">Proessional Experience</h2>
+                    <div class="dark-purple-border toggle-button">
+                        <h2 class="centered-text">Expand, Press Me!</h2>
+                        <h2 class="centered-text hidden">Collapse, Press Me!</h2>
+                    </div>
+                </div>
+                
+                <div class="section-details hidden">
                     <p>Job 1 title placeholder</p>
                     <p>Job 1 details placeholder</p>
                     <p>Job 2 title placeholder</p>
@@ -27,8 +34,14 @@
                 </div>
             </div>
             <div class = "dark-purple-border" id="Projects">
-                <h2>Side Projects</h2>
-                <div class="hidden">
+                <div class="dark-purple-border">
+                    <h2 class="dark-purple-border">Side Projects</h2>
+                    <div class="dark-purple-border toggle-button">
+                        <h2 class="centered-text">Expand, Press Me!</h2>
+                        <h2 class="centered-text hidden">Collapse, Press Me!</h2>
+                    </div>
+                </div>
+                <div class="section-details hidden">
                     <p>Personal Project 1 - Personal Website: Placeholder</p>
                     <p>Project Description Placeholder</p>
                     <p>Personal Project 2 - Pokemon Converter: Placeholder</p>
@@ -36,8 +49,14 @@
                 </div>
             </div>
             <div class = "dark-purple-border" id="Links">
-                <h2>Links</h2>
-                <div class="hidden">
+                <div>
+                    <h2 class="dark-purple-border">Links</h2>
+                    <div class="dark-purple-border toggle-button">
+                        <h2 class="centered-text">Expand, Press Me!</h2>
+                        <h2 class="centered-text hidden">Collapse, Press Me!</h2>
+                    </div>
+                </div>
+                <div class="section-details hidden">
                     <p>Github Link Placeholder</p>
                     <p>LinkedIn Link Placeholder</p>
                 </div>
