Change margin and padding on press me buttons
Update the 2 h2 elements in each sub-section that contain a 'press me' text to remove the margin and padding. There was too much space

--- a/index_v2.html
+++ b/index_v2.html
@@ -19,10 +19,10 @@
             </div>
             <div class = "dark-purple-border" id="Professional">
                 <div>
-                    <h2 class="dark-purple-border">Proessional Experience</h2>
+                    <h2 class="dark-purple-border">Professional Experience</h2>
                     <div class="dark-purple-border toggle-button">
-                        <h2 class="centered-text">Expand, Press Me!</h2>
-                        <h2 class="centered-text hidden">Collapse, Press Me!</h2>
+                        <h2 class="centered-text press">Expand, Press Me!</h2>
+                        <h2 class="centered-text press hidden">Collapse, Press Me!</h2>
                     </div>
                 </div>
                 
@@ -37,8 +37,8 @@
                 <div class="dark-purple-border">
                     <h2 class="dark-purple-border">Side Projects</h2>
                     <div class="dark-purple-border toggle-button">
-                        <h2 class="centered-text">Expand, Press Me!</h2>
-                        <h2 class="centered-text hidden">Collapse, Press Me!</h2>
+                        <h2 class="centered-text press">Expand, Press Me!</h2>
+                        <h2 class="centered-text press hidden">Collapse, Press Me!</h2>
                     </div>
                 </div>
                 <div class="section-details hidden">
@@ -52,8 +52,8 @@
                 <div>
                     <h2 class="dark-purple-border">Links</h2>
                     <div class="dark-purple-border toggle-button">
-                        <h2 class="centered-text">Expand, Press Me!</h2>
-                        <h2 class="centered-text hidden">Collapse, Press Me!</h2>
+                        <h2 class="centered-text press">Expand, Press Me!</h2>
+                        <h2 class="centered-text press hidden">Collapse, Press Me!</h2>
                     </div>
                 </div>
                 <div class="section-details hidden">
