Add Image placeholder

--- a/index_v2.html
+++ b/index_v2.html
@@ -15,6 +15,7 @@
         <section>
             <div id="Home">
                 <h2 id="nameplate" class="centered-text dark-purple-font dark-purple-border spaced-lettering">Zeko Madson</h2>
+                <p>Image Placeholder</p>
                 <p class="centered-text dark-purple-font dark-purple-border spaced-lettering">Data Analyst - BI Developer - Aspiring Software Engineer</p>
             </div>
             <div class = "dark-purple-border" id="Professional">
