Add borders to job and projects
Add job titles and a placeholders for each role. I will add the long descriptions in time. Additionally add borders to surround each role / project and their description.

--- a/index_v2.html
+++ b/index_v2.html
@@ -28,10 +28,31 @@
                     <div class="dark-purple-border">
                         <h2 class="centered-text toggle-button ">Toggle Display!</h2>
                         <div class="section-details hide-content">
-                            <p>Job 1 title placeholder</p>
-                            <p>Job 1 details placeholder</p>
-                            <p>Job 2 title placeholder</p>
-                            <p>Job 2 details placeholder</p>
+                            <div class="dark-purple-border">
+                                <h3 class="toggle-button">Reporting Analyst 4 - AMN Healthcare</h3>
+                                <div class="hide-content">
+                                    <p>Job Details</p>
+                                </div>
+                            </div>
+                            <div class="dark-purple-border">
+                                <h3 class="toggle-button">Business Reporting Analyst - Baker Tilly</h3>
+                                <div class="hide-content">
+                                    <p>Job Details</p>
+                                </div>
+                            </div>
+                            <div class="dark-purple-border">
+                                <h3 class="toggle-button">IT Analyst - Ecolab</h3>
+                                <div class="hide-content">
+                                    <p>Job Details</p>
+                                </div>
+                            </div>
+                            <div class="dark-purple-border">
+                                <h3 class="toggle-button">IT Intern - Ecolab</h3>
+                                <div class="hide-content">
+                                    <p>Job Details</p>
+                                </div>
+                            </div>
+                            
                         </div>
                     </div>
                 </div>    
@@ -42,14 +63,21 @@
                     <div class="dark-purple-border">
                         <h2 class="centered-text toggle-button">Toggle Display!</h2>
                         <div class="section-details hide-content">
-                            <p>Personal Project 1 - Personal Website: Placeholder</p>
-                            <p>Project Description Placeholder</p>
-                            <p>Personal Project 2 - Pokemon Converter: Placeholder</p>
-                            <p>Project Description Placeholder</p>
+                            <div class="dark-purple-border">
+                                <h3 class="toggle-button">Pokemon Comparison</h3>
+                                <div class="hide-content">
+                                    <p>Project Details</p>
+                                </div>
+                            </div>
+                            <div class="dark-purple-border">
+                                <h3 class="toggle-button">Personal Website</h3>
+                                <div class="hide-content">
+                                    <p>Project Details</p>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
-                
             </div>
             <div class = "dark-purple-border" id="Links">
                 <div>
