Add links to other personal sites
Update 'Links' section with hyperlinks to my other profiles (GitHub, LinkedIn, and JSFiddle

--- a/index_v2.html
+++ b/index_v2.html
@@ -22,7 +22,7 @@
         <section>
             <div id="Home">
                 <h2 id="nameplate" class="centered-text dark-purple-font dark-purple-border spaced-lettering">Zeko Madson</h2>
-                <p>Image Placeholder</p>
+                <img src="images/portrait.jpg" alt="Portrait">
                 <p class="centered-text dark-purple-font dark-purple-border spaced-lettering">Data Analyst - BI Developer - Aspiring Software Engineer</p>
             </div>
             <div class = "dark-purple-border" id="Professional">
@@ -93,9 +93,9 @@
                     <div class="dark-purple-border">
                         <h2 class="centered-text toggle-button">Toggle Display!</h2>
                         <div class="section-details hide-content">
-                            <p>Github Link Placeholder</p>
-                            <p>LinkedIn Link Placeholder</p>
-                            <p>JS Fiddle Link Placeholder</p>
+                            <a href="https://github.com/zekomadson">GitHub profile</a>
+                            <a href="https://www.linkedin.com/in/zmadson/">LinkedIn Profile</a>
+                            <a href="https://jsfiddle.net/user/zekomadson/fiddles/">JSFiddle profile</a>
                         </div>
                     </div>
                 </div>
