Center Header and Profile Picture

--- a/index_v2.html
+++ b/index_v2.html
@@ -18,11 +18,11 @@
             <a class="white-border white-font dark-purple-background" href="#Home">Home</a>
             <a class="white-border white-font dark-purple-background" href="#Professional">Professional Experience</a>
             <a class="white-border white-font dark-purple-background" href="#Projects">Projects</a>
-        </nav>
+        </nav> 
         <section>
-            <div id="Home">
+            <div id="Home" class="vertical-flex-box">
                 <h2 id="nameplate" class="centered-text dark-purple-font dark-purple-border spaced-lettering">Zeko Madson</h2>
-                <img src="images/portrait.jpg" alt="Portrait">
+                <img class="portrait" src="images/portrait.jpg" alt="Portrait">
                 <p class="centered-text dark-purple-font dark-purple-border spaced-lettering">Data Analyst - BI Developer - Aspiring Software Engineer</p>
             </div>
             <div class = "dark-purple-border" id="Professional">
