--- a/index_v2.html
+++ b/index_v2.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Zeko's Website_v2</title>
-        <link rel="stylesheet" href="styles_v2.css">
+        <link rel="stylesheet" href="styles.css">
         <script
             src="https://code.jquery.com/jquery-3.6.3.min.js"
             integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU="
