Replace inline script with javascript file
Replacement of inline jQuery script that was found within HTML file with the outside script.js file.

--- a/index.html
+++ b/index.html
@@ -100,11 +100,7 @@
                     </div>
                 </div>
             </div>
-            <script>
-                $(".toggle-button").click(function(){
-                    $(this).next("div").toggleClass("hide-content");
-                });
-            </script>
+            <script src="script.js"></script>
         </section>
     </body>
 </html>
