--- a/index.html
+++ b/index.html
@@ -71,7 +71,14 @@
                                 <div class="hide-content">
                                     <p>The Pokemon Comparison application was a simple python project to develop my python / data programming skills while building an application that I myself would find fun to use.
                                         It's an application that allows the user to select a character from Fifa (men and women) or Pokemon and it will generate a comparison to characters in the other along with a brief description as to how it made.</p>
-                                    <p>Tech Stack: Python, Pandas</p>
+                                    <div>
+                                        <h3 class="toggle-button">Tech Stack:</h3>
+                                        <div class="hide-content">
+                                            <p>Python, Pandas</p>
+                                        </div>
+                                        
+                                    </div>
+                                    <a href="https://github.com/zekomadson">Github Repo Link</a>
                                 </div>
                             </div>
                             <div class="dark-purple-border">
@@ -80,7 +87,28 @@
                                     <p>The Personal Website project was a means for me to develop my front end development knowledge. I've been interested in web development for many years and 
                                         this was a perfect first project.
                                     </p>
-                                    <p>Tech Stack: HTML, CSS, JavaScript, jQuery</p>
+                                    <div>
+                                        <h3 class="toggle-button">Tech Stack:</h3>
+                                        <div class="hide-content">
+                                            <p>JavaScript, jQuery, HTML, CSS</p>
+                                        </div>
+                                    </div>
+                                    <a href="https://github.com/zekomadson">Github Repo Link</a>
+                                </div>
+                            </div>
+                            <div class="dark-purple-border">
+                                <h3 class="toggle-button">Website Redesign</h3>
+                                <div class="hide-content">
+                                    <p>The Personal Website project was a means for me to develop my front end development knowledge. I've been interested in web development for many years and 
+                                        this was a perfect first project.
+                                    </p>
+                                    <div>
+                                        <h3 class="toggle-button">Tech Stack:</h3>
+                                        <div class="hide-content">
+                                            <p>JavaScript, jQuery, HTML, CSS</p>
+                                        </div>
+                                    </div>
+                                    <a href="https://github.com/zekomadson">Github Repo Link</a>
                                 </div>
                             </div>
                         </div>
