Add correct links to side project repos
update the repo links to the side projects.

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                                         </div>
                                         
                                     </div>
-                                    <a href="https://github.com/zekomadson">Github Repo Link</a>
+                                    <a href="https://github.com/zekomadson/pokemon_comparison">Github Repo Link</a>
                                 </div>
                             </div>
                             <div class="dark-purple-border">
@@ -93,7 +93,7 @@
                                             <p>JavaScript, jQuery, HTML, CSS</p>
                                         </div>
                                     </div>
-                                    <a href="https://github.com/zekomadson">Github Repo Link</a>
+                                    <a href="https://github.com/zekomadson/personal-website">Github Repo Link</a>
                                 </div>
                             </div>
                             <div class="dark-purple-border">
@@ -108,7 +108,7 @@
                                             <p>JavaScript, jQuery, HTML, CSS</p>
                                         </div>
                                     </div>
-                                    <a href="https://github.com/zekomadson">Github Repo Link</a>
+                                    <a href="https://github.com/zekomadson/site_rework">Github Repo Link</a>
                                 </div>
                             </div>
                         </div>
