--- a/index.html
+++ b/index.html
@@ -34,25 +34,53 @@
                             <div class="dark-purple-border">
                                 <h3 class="toggle-button">Reporting Analyst 4 - AMN Healthcare</h3>
                                 <div class="hide-content">
+                                    <h3>Job Overview</h3>
                                     <p>Job Details</p>
+                                    <div>
+                                        <h3 class="toggle-button">Tech Stack:</h3>
+                                        <div class="hide-content">
+                                            <p>PowerBI, SQL, SSRS, SSIS, DevOps</p>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                             <div class="dark-purple-border">
                                 <h3 class="toggle-button">Business Reporting Analyst - Baker Tilly</h3>
                                 <div class="hide-content">
+                                    <h3>Job Overview</h3>
                                     <p>Job Details</p>
+                                    <div>
+                                        <h3 class="toggle-button">Tech Stack:</h3>
+                                        <div class="hide-content">
+                                            <p>PowerBI, SQL, SSRS, SSIS, DevOps</p>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                             <div class="dark-purple-border">
                                 <h3 class="toggle-button">IT Analyst - Ecolab</h3>
                                 <div class="hide-content">
+                                    <h3>Job Overview</h3>
                                     <p>Job Details</p>
+                                    <div>
+                                        <h3 class="toggle-button">Tech Stack:</h3>
+                                        <div class="hide-content">
+                                            <p>PowerBI, SQL, DevOps</p>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                             <div class="dark-purple-border">
                                 <h3 class="toggle-button">IT Intern - Ecolab</h3>
                                 <div class="hide-content">
+                                    <h3>Job Overview</h3>
                                     <p>Job Details</p>
+                                    <div>
+                                        <h3 class="toggle-button">Tech Stack:</h3>
+                                        <div class="hide-content">
+                                            <p>PowerBI, SQL, DevOps</p>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                             
