Update project descriptions
Add more details to the project descriptions

--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
                             <div class="dark-purple-border">
                                 <h3 class="toggle-button">Pokemon Comparison</h3>
                                 <div class="hide-content">
-                                    <p>The Pokemon Comparison application was a simple python project to develop my python / data programming skills while building an application that I myself would find fun to use.
-                                        It's an application that allows the user to select a character from Fifa (men and women) or Pokemon and it will generate a comparison to characters in the other along with a brief description as to how it made.</p>
+                                    <p>The Pokemon Comparison application was a Python project to elevate my basic programming skills while building an application that I find fun.
+                                        The application allows a user to select a character from Fifa (Men and Women) or Pokemon and it will generate a comparison to characters in the other games along with a brief description as to how it made.</p>
                                     <div>
                                         <h3 class="toggle-button">Tech Stack:</h3>
                                         <div class="hide-content">
@@ -112,8 +112,8 @@
                             <div class="dark-purple-border">
                                 <h3 class="toggle-button">Personal Website</h3>
                                 <div class="hide-content">
-                                    <p>The Personal Website project was a means for me to develop my front end development knowledge. I've been interested in web development for many years and 
-                                        this was a perfect first project.
+                                    <p>The personal website project developed my front end development skills, expands general software engineering knowledge,
+                                        and provided an opportunity to learn JavaScript and jQuery to improve website functionality and interactivity.
                                     </p>
                                     <div>
                                         <h3 class="toggle-button">Tech Stack:</h3>
@@ -127,8 +127,8 @@
                             <div class="dark-purple-border">
                                 <h3 class="toggle-button">Website Redesign</h3>
                                 <div class="hide-content">
-                                    <p>The Personal Website project was a means for me to develop my front end development knowledge. I've been interested in web development for many years and 
-                                        this was a perfect first project.
+                                    <p>Website Redesign project built on my front end development knowledge by rebuilding a multitude of websites. 
+                                        More importantly it forces me to more closely evaluate website UI/UXs more rigorously. 
                                     </p>
                                     <div>
                                         <h3 class="toggle-button">Tech Stack:</h3>
