Bug Fix: toggle display of pofessional experience
The Professional Experience toggle section was not working as expected

--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
             <a class="white-border white-font dark-purple-background" href="#Home">Home</a>
             <a class="white-border white-font dark-purple-background" href="#Professional">Professional Experience</a>
             <a class="white-border white-font dark-purple-background" href="#Projects">Projects</a>
-            <span class="icon"><i class='bx bx-check'></i></span>
         </nav> 
         <section>
             <div id="Home" class="vertical-flex-box">
@@ -32,7 +31,7 @@
                     <h2 class="dark-purple-border">Professional Experience</h2>
                     <div class="dark-purple-border">
                         <h2 class="centered-text toggle-button ">Toggle Display!</h2>
-                        <div class="section-details hide-content"></div>
+                        <div class="hide-content">
                             <div class="dark-purple-border">
                                 <h3 class="toggle-button">Reporting Analyst 4 - AMN Healthcare</h3>
                                 <div class="hide-content">
@@ -85,7 +84,6 @@
                                     </div>
                                 </div>
                             </div>
-                            
                         </div>
                     </div>
                 </div>    
