Update front end file organization
Removed and generated a few files. Replacement of the index.html file with a desktop.html and mobile.html files.

--- a/desktop.html
+++ b/desktop.html
@@ -84,6 +84,19 @@
                                     </div>
                                 </div>
                             </div>
+                            <div class="dark-purple-border">
+                                <h3 class="toggle-button">Electrical Engineer Intern - Astronautics Corporation of America</h3>
+                                <div class="hide-content">
+                                    <h3>Job Overview</h3>
+                                    <p>Job Details</p>
+                                    <div>
+                                        <h3 class="toggle-button">Tech Stack:</h3>
+                                        <div class="hide-content">
+                                            <p>Excel, VBA</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>    
