Add section placeholders

--- a/mobile.html
+++ b/mobile.html
@@ -18,5 +18,17 @@
 </head>
 <body>
     <h3>This is the mobile app website.</h3>
+    <nav>
+        <a>Placeholder for a boxicon</a>
+    </nav>
+    <div>
+        <h2>Professional Experience</h2>
+    </div>
+    <div>
+        <h2>Personal Projects</h2>
+    </div>
+    <div>
+        <h2>Contact</h2>
+    </div>
 </body>
 </html>
