Add dropdown menu with default blank value
Add dropdown menu with a default value that is blank

--- a/pomodoro/index.html
+++ b/pomodoro/index.html
@@ -22,8 +22,8 @@
         <h6>Produced by Zeko Madson</h6>
     </div>
     <div>
-        <h3>Select Study Study Length</h3>
-        <h3>Select Relax Length</h3>
+        <h3>Select Study Duration</h3>
+        <h3>Select Relax Duration</h3>
         <div>
             <h3>Select Study Music Playlist</h3>
             <ul>
@@ -31,6 +31,14 @@
                 <li>Youtube Link </li> 
             </ul>
         </div>
+        <div class="dropdown">
+            <label for="selection">Select Study Music:</label>
+            <select>
+                <option value=""></option>
+                <option value="spotify">Spotify Playlist</option>
+                <option value="youtube">Youtube Playlist</option>
+            </select>
+          </div>
     </div>
     <button>Begin!</button>
 </body>
