--- a/pomodoro/index.html
+++ b/pomodoro/index.html
@@ -16,22 +16,16 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Gloock&display=swap" rel="stylesheet">
 </head>
-<body>
-    <div>
-        <h2>Pomodoro Web App</h2>
-        <h6>Produced by Zeko Madson</h6>
+<body class="columnFlex">
+    <div class="subFlex">
+        <h2 class="centerText">Pomodoro Web App</h2>
+        <h6 class="centerText">By Zeko</h6>
     </div>
-    <div>
-        <h3>Select Study Duration</h3>
-        <h3>Select Relax Duration</h3>
-        <div>
-            <label for="selection">Select Study Music:</label>
-            <select>
-                <option value=""></option>
-                <option value="spotify">Spotify Playlist</option>
-                <option value="youtube">Youtube Playlist</option>
-            </select>
-          </div>
+    <div class="subFlex columnFlex">
+        <label for="study-input">Enter a study duration:</label>
+        <input type="number" id="study-input" name="num-input" min="0" max="120" step="1">
+        <label for="relax-input">Enter a relax duration:</label>
+        <input type="number" id="relax-input" name="num-input" min="0" max="120" step="1">
     </div>
     <button>Begin!</button>
 </body>
