--- a/pomodoro/index.html
+++ b/pomodoro/index.html
@@ -17,6 +17,10 @@
         <link href="https://fonts.googleapis.com/css2?family=Gloock&display=swap" rel="stylesheet">
     </head>
     <body class="columnFlex">
+        <nav class="rowFlex">
+            <a class="subFlex centerText">Home</a>
+            <a class="subFlex centerText">Login</a>
+        </nav>
         <div class="subFlex">
             <h2 class="centerText">Pomodoro Web App</h2>
             <h6 class="centerText">By Zeko</h6>
