Add Signup button

--- a/pomodoro/index.html
+++ b/pomodoro/index.html
@@ -20,6 +20,7 @@
         <nav class="rowFlex">
             <a class="subFlex centerText">Home</a>
             <a class="subFlex centerText">Login</a>
+            <a class="subFlex centerTex">Sign-Up</a>
         </nav>
         <div class="subFlex">
             <h2 class="centerText">Pomodoro Web App</h2>
