--- a/pomodoro/index.html
+++ b/pomodoro/index.html
@@ -30,8 +30,10 @@
             <label for="study-input">Enter a study duration:</label>
             <input type="number" id="study-input" name="num-input" min="0" max="120" step="1">
         </div>
-        <button id="start-btn">Start Countdown</button>
-        <p id="countdown"></p>
+        <div class="clock">
+            <button id="start-btn">Start Countdown</button>
+        </div>
+        
     </body>
     <script src="script.js"></script>
 </html>
