--- a/pomodoro/index.html
+++ b/pomodoro/index.html
@@ -30,8 +30,8 @@
             <label for="study-input">Enter a study duration:</label>
             <input type="number" id="study-input" name="num-input" min="0" max="120" step="1">
         </div>
-        <div class="clock">
-            <button id="start-btn">Start Countdown</button>
+        <div class="clock columnFlex">
+            <button id="start-btn" class="subFlex">Start Clock</button>
         </div>
         
     </body>
