Update color palette with global variables
implemented global variables to assign the color palette that was going to be used for the application.'

--- a/pomodoro/index.html
+++ b/pomodoro/index.html
@@ -22,7 +22,7 @@
             <a class="subFlex centerText">Login</a>
             <a class="subFlex centerText">Sign-Up</a>
         </nav>
-        <div class="light-pink-background">
+        <div class="main">
             <div >
                 <h2 class="centerText">Pomodoro Web App</h2>
                 <h4 class="centerText">By Zeko</h4>
