--- a/pomodoro/index.html
+++ b/pomodoro/index.html
@@ -16,24 +16,20 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Gloock&display=swap" rel="stylesheet">
     </head>
-    <body class="columnFlex">
-        <nav class="rowFlex light-pink-background">
-            <a class="subFlex centerText">Home</a>
-        </nav>
-        <div class="main">
-            <div >
-                <h2 class="centerText">Pomodoro Web App</h2>
-                <h4 class="centerText">By Zeko</h4>
-                </div>
-                <div class="subFlex columnFlex">
-                    <label for="study-input">Enter a study duration:</label>
-                    <input type="number" id="study-input" name="num-input" min="0" max="120" step="1">
-                </div>
-                <div class="clock columnFlex">
-                    <button id="start-btn" class="subFlex">Start Clock</button>
-                </div>
+    <body class="flexbox-container">
+        <div class="main flexbox-item flexbox-container">
+            <div class="flexbox-item">
+                <h2 class="centerText">Pomodoro Study</h2>
             </div>
-            <div class="subFlex">
+            <div class="flexbox-item flexbox-container">
+                <label for="study-input" class="centerText">Enter Study Duration (minutes):</label>
+                <input type="number" id="study-input" name="num-input" min="0" max="120" step="1">
+                <label for="break-input" class="centerText">Enter Break Duration (minutes):</label>
+                <input type="number" id="break-input" name="num-input" min="0" max="20" step="1">
+            </div>
+            <div class="clock flexbox-item flexbox-container">
+                <button id="start-btn" class="flexbox-item">Start Clock</button>
+            </div>
         </div>
     </body>
     <script src="script.js"></script>
