Move script tag to head
Move script tag to the head portion of the html file, utilize the defer language

--- a/pomodoro/index.html
+++ b/pomodoro/index.html
@@ -15,6 +15,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Gloock&display=swap" rel="stylesheet">
+        <script src="script.js" defer></script>
     </head>
     <body class="flexbox-container">
         <div class="main flexbox-item flexbox-container">
@@ -37,5 +38,4 @@
             </div>
         </div>
     </body>
-    <script src="script.js"></script>
 </html>
