Removal of input

--- a/pomodoro/index.html
+++ b/pomodoro/index.html
@@ -33,7 +33,7 @@
             </div>
             <div id="task-div" class="flexbox-container flexbox-item">
                 <div id="task" class="flexbox-container flexbox-item light-border">
-                    <h2 id="add-task" class="center-text">Add Tasks +</h2>
+                    <h2 id="add-task" class="center-text light-border">Add Tasks +</h2>
                 </div>
             </div>
         </div>
