--- a/wishlist/desktop.html
+++ b/wishlist/desktop.html
@@ -18,6 +18,9 @@
     <script src="script.js" defer></script>
 </head>
 <body>
+    <nav>
+        <a href="../desktop.html">Home</a>
+    </nav>
     <ul>Selections:
         <li>Category: Girlfriend, Apartment, Style </li>
         <li>What is it: Input value / Write-in </li>
